2005-05-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores-dialog.gob: Split the button setting routine out
	from the initialiser and give it its own function. This results in
	nicer code.
	Oops: make _set_message handle NULL strings properly.

2005-05-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores-dialog.gob: Add a message area to the dialog. Use
	games_scores_dialog_set_message. Also add an extra option to _new
	to set the button types.

2005-05-04  Richard Hoelscher  <rah@rahga.com>

	* games-card-pixmaps.c (games_card_pixmaps_get_red_joker): 
	Specify the correct card. This only affected Aisleriot Thieves.

2005-04-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores-dialog.gob: Handle the case when no categories are
	defined. i.e. games with only one level.

2005-04-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-controls.c: Don't leak a gconf client reference when
	errors occur.

2005-04-04  Richard Hoelscher  <rah@rahga.com>

	* games-stock.c (games_stock_items): i18n notes.

2005-04-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores-dialog.gob: Port Dennis' UI fixes back to the gob
	fiile and repack the vbox so that it works as expected by
	same-gnome et. al.

2005-03-31  Richard Hoelscher  <rah@rahga.com>

	* games-stock.c (games_stock_items): Remove ellipsis for the menuitem "Scores",
	since it does not require further input from the user prior to doing something. 
	Also, try using "New", "Pause" and "Restart" without appending the word "Game".

2005-03-30  Richard Hoelscher  <rah@rahga.com>

	* games-stock.h:
	* games-stock.c: New files to support games-stock menu items.
	Call games_stock_init () prior to using the items.

2005-03-23  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gnome-scores-dialog.c: Make the scores dialog more HIG compliant.
 	
2005-03-23  Richard Hoelscher  <rah@rahga.com>

	* games-gridframe.h:
	* games-gridframe.c: Alignment support added throughout.