@@ -51,7 +51,6 @@ scorpion.scm
 scuffle.scm
 seahaven.scm
 sir_tommy.scm
-sol.scm
 spiderette.scm
 spider_one_suit.scm
 spider.scm
