@@ -1,3 +1,8 @@
+2005-05-28  Richard Hoelscher  <rah@rahga.com>
+
+	* games-stock.c (games_stock_copy_tooltip_from_stockid):
+	Takes a stockid, and sends back a copy of a nice tooltip string.
+
 2005-05-25  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* games-scores-dialog.gob: Split the button setting routine out
